--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 API_KEY=your-mistral-api-key
+profile_name=ravi
+redshift_host=data-analysis-staging-staging1.cgrrbmzkztxz.us-east-1.redshift.amazonaws.com
+redshift_port=5439
+redshift_database=data
+redshift_username=gen_ai_hrs
+redshift_password=HrSData1
